[gd_scene load_steps=27 format=3]

[ext_resource type="Script" path="res://entity/light_cow/cow.gd" id="1_rm0s4"]
[ext_resource type="Texture2D" uid="uid://c10e8w0f1ikri" path="res://entity/light_cow/Light cow animations.png" id="2_3deei"]
[ext_resource type="PackedScene" uid="uid://dyg0jbsryofkx" path="res://components/detection_area/detection_area.tscn" id="3_ajo2j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psrwj"]
size = Vector2(4.00001, 21)

[sub_resource type="Animation" id="Animation_0dt42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nee4m"]
resource_name = "get_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"anim_ended"
}]
}

[sub_resource type="Animation" id="Animation_o5hw3"]
resource_name = "get_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"anim_ended"
}]
}

[sub_resource type="Animation" id="Animation_n7rr0"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_1v1uu"]
resource_name = "sleep"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_doiqd"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsotg"]
_data = {
"RESET": SubResource("Animation_0dt42"),
"get_down": SubResource("Animation_nee4m"),
"get_up": SubResource("Animation_o5hw3"),
"idle": SubResource("Animation_n7rr0"),
"sleep": SubResource("Animation_1v1uu"),
"walk": SubResource("Animation_doiqd")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8l81r"]
animation = &"get_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8r34"]
animation = &"get_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hr22q"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4cpib"]
animation = &"sleep"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2gfpm"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t68m2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1bsbm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_noy62"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q2abe"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xg3uj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8sxyj"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_db0nd"]
states/get_down/node = SubResource("AnimationNodeAnimation_8l81r")
states/get_down/position = Vector2(180, 31)
states/get_up/node = SubResource("AnimationNodeAnimation_b8r34")
states/get_up/position = Vector2(439, 31)
states/idle/node = SubResource("AnimationNodeAnimation_hr22q")
states/idle/position = Vector2(315, 100)
states/sleep/node = SubResource("AnimationNodeAnimation_4cpib")
states/sleep/position = Vector2(315, 31)
states/walk/node = SubResource("AnimationNodeAnimation_2gfpm")
states/walk/position = Vector2(436, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_t68m2"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_1bsbm"), "sleep", "get_up", SubResource("AnimationNodeStateMachineTransition_noy62"), "get_up", "idle", SubResource("AnimationNodeStateMachineTransition_q2abe"), "idle", "get_down", SubResource("AnimationNodeStateMachineTransition_xg3uj"), "get_down", "sleep", SubResource("AnimationNodeStateMachineTransition_8sxyj")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_re6n7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7scgb"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdiv0"]
size = Vector2(21, 4)

[node name="light_cow" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_rm0s4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(-1.50001, 11)
rotation = 1.5708
shape = SubResource("RectangleShape2D_psrwj")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 12)
texture = ExtResource("2_3deei")
offset = Vector2(0, -13)
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsotg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_db0nd")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_re6n7")

[node name="WanderTimer" type="Timer" parent="."]

[node name="detection_area" parent="." instance=ExtResource("3_ajo2j")]
visible = false
position = Vector2(-11, -3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="detection_area" index="0"]
position = Vector2(12, 7)
shape = SubResource("CircleShape2D_7scgb")

[node name="DetectionTimer" type="Timer" parent="."]

[node name="EntityCollision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityCollision"]
position = Vector2(-1.5, 11)
shape = SubResource("RectangleShape2D_rdiv0")

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="DetectionTimer" to="." method="_on_detection_timer_timeout"]
[connection signal="area_entered" from="EntityCollision" to="." method="_on_test_area_entered"]

[editable path="detection_area"]
